added game logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,5 @@
     "noImplicitAny": false,
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*"
-  ],
+  "include": ["./src/**/*"]
 }
