--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Starter for HTTP / WS homework. Binary Studio Academy",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.ts",
+    "start": "node build/server.js",
+    "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
   "keywords": [
